public class Constants
{
    //Animation
    public const string ANIM_RUN = "run";
    public const string ANIM_IDLE = "idle";
    public const string ANIM_DANCE = "dance";
    public const string ANIM_ATTACK = "attack";
    public const string ANIM_DEAD = "dead";

    //Level
    public const string PLAYERPREF_LEVEL = "Level";


    //Tag
    public const string TAG_PLAYER = "Player";


    //Currency
    public const string CURRENCY_FILE = "currencydata.dat";
    public const string USERDATA_FILE = "userdata.dat";

}

